[package]
name = "wecom-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["alloc"] }
rand = "0.8.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.21.7"
sha1 = "0.10.6"
