[package]
name = "wecom-crypto"
version = "0.1.1"
edition = "2021"
description = "企业微信API数据加解密库。"
license = "MIT OR Apache-2.0"
authors = ["尹国冰", "yinguobing <yinguobing@gmail.com>"]
repository = "https://github.com/wandering-ai/wecom-crypto"
keywords = ["wecom"]
readme = "README.md"

[dependencies]
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["alloc"] }
rand = "0.8.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.21.7"
sha1 = "0.10.6"
